heading content & links styles change

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main>
         <header>
-            <h1>Konrad Bujas - strona domowa</h1>
+            <h1>Konrad Bujas - strona domowa kursu WTF</h1>
         </header>
 
         <section>
