changes text in section about me

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
         <section>
             <h2 class="special-header">Kim jestem?</h2>
-            <img src="konrad.jpg" alt="uśmiechnięty Konrad"/>
+            <img src="konrad.jpg" alt="Uśmiechnięty Konrad"/>
             <p>Hej! Jestem Konrad i już wiele przeszedłem ;) Aktualnie jestem w procesie zmiany branży na IT i cisnę ze
                 szkoleniem<br />
                 Maćka Korsana <strong><a href="https://cotenfrontend.pl">WTF Co Ten Frontend.</a></strong><br />
                 Wcześniej <b>wiele próbowałem</b> i szukałem zajęcia, ale większość zadań albo znudziła mi się, albo
-                zadania się skończyły<br />
+                zadania się skończyły ;(<br />
                 i pojawiło się u mnie miejsce na coś nowego...<br />
-                Po wielu próbach i rozmyślaniach zwróciłem się w stronę IT... wiecie rozwój, nowe technologie,
+                Po wielu próbach i rozmyślaniach zwróciłem się w stronę IT... wiecie nauka, rozwój, nowe technologie,
                 sprawczość i wreszcie kasa ;)<br/>
                 Ta strona to mój osobisty dziennik nauki i wrzucam tutaj część materiałów ze szkolenia, jak również notatki.
                 <a href="#notatki">Przejdź do notatek</a></p>
