styles change and center content & remove alert window

--- a/nauka-css.html
+++ b/nauka-css.html
@@ -1,53 +1,46 @@
 <!DOCTYPE html>
 <html lang="pl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Konrad</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-</head>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<body>
+  <body>
     <header id="top">
-        <nav>
-            <a href="index.html">strona główna</a>
-            <a href="nauka-html.html">nauka html</a>
-            <a href="nauka-css.html">nauka css</a>
-        </nav>
+      <nav>
+        <a href="index.html">strona główna</a>
+        <a href="nauka-html.html">nauka html</a>
+        <a href="nauka-css.html">nauka css</a>
+      </nav>
     </header>
 
     <main>
+      <header>
+        <h1>Nauka CSS</h1>
+      </header>
+      <img src="css-icon1.jpg" alt="ikonka css" />
 
-        <header>
-            <h1>Nauka CSS</h1>
-        </header>
-        <img src="css-icon1.jpg" alt="ikonka css"/>
+      <section class="my-love-notes">
+        <h2 id="notatki">Moje ulubione własności</h2>
 
+        <article>
+          <h3>background</h3>
+          <p>Zmienia kolor tła za elementem lub klasą</p>
+        </article>
 
-        <section class="my-love-notes">
-            <h2 id="notatki">Moje ulubione własności</h2>
-
-            <article>
-                <h3>background</h3>
-                <p>Zmienia kolor tła za elementem lub klasą</p>
-            </article>
-
-            <article>
-                <h3>color</h3>
-                <p>zmienia kolor tekstu</p>
-            </article>
-
-
-        </section>
-
-
+        <article>
+          <h3>color</h3>
+          <p>zmienia kolor tekstu</p>
+        </article>
+      </section>
     </main>
 
-    <footer> to jest stopka mojej strony i pasuje tu napisać coś mądrego -> 2021.03.17
-        <a href="#top">Wróć na górę strony</a>
+    <footer>
+      to jest stopka mojej strony i pasuje tu napisać coś mądrego -> 2021.03.17
+      <a href="#top">Wróć na górę strony</a>
     </footer>
-</body>
-
+  </body>
 </html>
