--- a/nauka-html.html
+++ b/nauka-html.html
@@ -1,57 +1,51 @@
 <!DOCTYPE html>
 <html lang="pl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Konrad</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-</head>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<body>
+  <body>
     <header id="top">
-        <nav>
-            <a href="index.html">strona główna</a>
-            <a href="nauka-html.html">nauka html</a>
-            <a href="nauka-css.html">nauka css</a>
-        </nav>
+      <nav>
+        <a href="index.html">strona główna</a>
+        <a href="nauka-html.html">nauka html</a>
+        <a href="nauka-css.html">nauka css</a>
+      </nav>
     </header>
 
     <main>
+      <header>
+        <h1>Nauka HTML-a</h1>
+      </header>
+      <img src="html_ikonka.jpg" alt="ikonka html" />
 
-        <header>
-            <h1>Nauka HTML-a</h1>
-        </header>
-        <img src="html_ikonka.jpg" alt="ikonka html"/>
+      <section class="my-love-notes">
+        <h2 id="notatki">Moje ulubione tagi</h2>
 
+        <article>
+          <h3>h1</h3>
+          <p>To jest mój ulubiony nagłówek</p>
+        </article>
 
-        <section class="my-love-notes">
-            <h2 id="notatki">Moje ulubione tagi</h2>
+        <article>
+          <h3># (hash)</h3>
+          <p>Hash to jest symbol id</p>
+        </article>
 
-            <article>
-                <h3>h1</h3>
-                <p>To jest mój ulubiony nagłówek</p>
-            </article>
-
-            <article>
-                <h3># (hash)</h3>
-                <p>Hash to jest symbol id</p>
-            </article>
-
-            <article>
-                <h3>. (kropka)</h3>
-                <p>Kropka . to jest symbol klasy</p>
-            </article>
-
-        </section>
-
-
+        <article>
+          <h3>. (kropka)</h3>
+          <p>Kropka . to jest symbol klasy</p>
+        </article>
+      </section>
     </main>
 
-    <footer> to jest stopka mojej strony i pasuje tu napisać coś mądrego -> 2021.03.17
-        <a href="#top">Wróć na górę strony</a>
+    <footer>
+      to jest stopka mojej strony i pasuje tu napisać coś mądrego -> 2021.03.17
+      <a href="#top">Wróć na górę strony</a>
     </footer>
-</body>
-
+  </body>
 </html>
