--- a/index.html
+++ b/index.html
@@ -1,89 +1,98 @@
 <!DOCTYPE html>
 <html lang="pl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Konrad</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-</head>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<body>
+  <body>
     <header id="top">
-        <nav>
-            <a href="index.html">strona główna</a>
-            <a href="nauka-html.html">nauka html</a>
-            <a href="nauka-css.html">nauka css</a>
-        </nav>
+      <nav>
+        <a href="index.html">strona główna</a>
+        <a href="nauka-html.html">nauka html</a>
+        <a href="nauka-css.html">nauka css</a>
+      </nav>
     </header>
 
     <main>
-        <header>
-            <h1>Konrad Bujas - strona domowa kursu WTF</h1>
-        </header>
+      <header>
+        <h1>Konrad Bujas - strona domowa na potrzeby kursu WTF</h1>
+      </header>
 
-        <section>
-            <h2 class="special-header">Kim jestem?</h2>
-            <img src="konrad.jpg" alt="Uśmiechnięty Konrad"/>
-            <p>Hej! Jestem Konrad i już wiele przeszedłem ;) Aktualnie jestem w procesie zmiany branży na IT i cisnę ze
-                szkoleniem<br />
-                Maćka Korsana <strong><a href="https://cotenfrontend.pl">WTF Co Ten Frontend.</a></strong><br />
-                Wcześniej <b>wiele próbowałem</b> i szukałem zajęcia, ale większość zadań albo znudziła mi się, albo
-                zadania się skończyły ;(<br />
-                i pojawiło się u mnie miejsce na coś nowego...<br />
-                Po wielu próbach i rozmyślaniach zwróciłem się w stronę IT... wiecie nauka, rozwój, nowe technologie,
-                sprawczość i wreszcie kasa ;)<br/>
-                Ta strona to mój osobisty dziennik nauki i wrzucam tutaj część materiałów ze szkolenia, jak również notatki.
-                <a href="#notatki">Przejdź do notatek</a></p>
-            
-        </section>
+      <section>
+        <h2 class="special-header">Kim jestem?</h2>
+        <img class="photo" src="konrad.jpg" alt="Uśmiechnięty Konrad" />
+        <p>
+          Hej! Jestem Konrad i już wiele przeszedłem ;) Aktualnie jestem w
+          procesie zmiany branży na IT i cisnę ze szkoleniem<br />
+          Maćka Korsana
+          <strong
+            ><a href="https://cotenfrontend.pl">WTF Co Ten Frontend.</a></strong
+          ><br />
+          Wcześniej <b>wiele próbowałem</b> i szukałem zajęcia, ale większość
+          zadań albo znudziła mi się, albo zadania się skończyły ;(<br />
+          i pojawiło się u mnie miejsce na coś nowego...<br />
+          Po wielu próbach i rozmyślaniach zwróciłem się w stronę IT... wiecie
+          nauka, rozwój, nowe technologie, sprawczość i wreszcie kasa ;)<br />
+          Ta strona to mój osobisty dziennik nauki i wrzucam tutaj część
+          materiałów ze szkolenia, jak również notatki.
+          <a href="#notatki">Przejdź do notatek</a>
+        </p>
+      </section>
 
-        <section>
-            <h2 id="notatki">Notatki z WTF</h2>
+      <section>
+        <h2 id="notatki">Notatki z WTF</h2>
 
-            <article>
-                <h3 class="little-header">WTF czyli Co Ten Frontend</h3>
-                <p>Aktualnie sporą część czasu zajmuje mi kurs WTF Co Ten Frontend
-                </p>
-            </article>
-
-            <article>
-                <h3 class="little-header">Język angielski</h3>
-                <p>Tutaj nie poświęcam tyle czasu ile bym chciał, ale nadrabiam zaległości słuchając podcastów i
-                    podobnych tego typu treści.</p>
-            </article>
-
-            <article>
-                <h3>Podcasty</h3>
-                <p>To nowość i w odróżnieniu od bloga gdzie czytamy, tu mamy do czynienia z audio. Wiele podcastów ma
-                    formę wywiadów lub solowych odcinków na dany temat.
-                    Tematy można wybierać w zależności od preferencji. Możemy subskrybować ulubionych twórców.
-                    Aktualnie używam aplikacji Podcast Addict i oceniam ją o wiele lepiej niż moją poprzednią apkę:
-                    Player FM. Między innymi przez mnogość opcji, automatyczne pobieranie, opcje archiwum oraz
-                    dostępność wielu kanałów.</p>
-            </article>
-
-        </section>
-        <section id="newsletter">
-            <article>
-                <h2>Pozostańmy w kontakcie! ;)</h2>
-                <p>Jeśli spodobał Ci się artykuł daj mi koniecznie o tym znać. To pomoże mi nabrać wiatru w żagle a Ty dostaniesz w zamian nową porcję informacji ;)<br/>
-                    Pozdrawiam i czekam na odpowiedź, hej! ;)
-                </p>
+        <article>
+          <h3 class="little-header">WTF czyli Co Ten Frontend</h3>
+          <p>Aktualnie sporą część czasu zajmuje mi kurs WTF Co Ten Frontend</p>
         </article>
-        </section>
 
+        <article>
+          <h3 class="little-header">Język angielski</h3>
+          <p>
+            Tutaj nie poświęcam tyle czasu ile bym chciał, ale nadrabiam
+            zaległości słuchając podcastów i podobnych tego typu treści.
+          </p>
+        </article>
+
+        <article>
+          <h3>Podcasty</h3>
+          <p>
+            To nowość i w odróżnieniu od bloga gdzie czytamy, tu mamy do
+            czynienia z audio. Wiele podcastów ma formę wywiadów lub solowych
+            odcinków na dany temat. Tematy można wybierać w zależności od
+            preferencji. Możemy subskrybować ulubionych twórców. Aktualnie
+            używam aplikacji Podcast Addict i oceniam ją o wiele lepiej niż moją
+            poprzednią apkę: Player FM. Między innymi przez mnogość opcji,
+            automatyczne pobieranie, opcje archiwum oraz dostępność wielu
+            kanałów.
+          </p>
+        </article>
+      </section>
+      <section id="newsletter">
+        <article>
+          <h2>Pozostańmy w kontakcie! ;)</h2>
+          <p>
+            Jeśli spodobał Ci się artykuł daj mi koniecznie o tym znać. To
+            pomoże mi nabrać wiatru w żagle a Ty dostaniesz w zamian nową porcję
+            informacji ;)<br />
+            Pozdrawiam i czekam na odpowiedź, hej! ;)
+          </p>
+          <div id='button'>napisz do mnie ;)</div>
+        </article>
+
+      </section>
     </main>
 
-    <footer> 
-        to jest stopka mojej strony i pasuje tu napisać coś mądrego -> 2021.03.17 <a href="#top">Wróć na górę strony</a>   
+    <footer>
+      to jest stopka mojej strony i pasuje tu napisać coś mądrego -> 2021.03.17
+      <a href="#top">Wróć na górę strony</a>
     </footer>
-<script>
-    
-</script>
-<script src="main.js"></script>
-
-</body>
-
+    <script></script>
+    <script src="main.js"></script>
+  </body>
 </html>
