--- a/nauka-css.html
+++ b/nauka-css.html
@@ -10,10 +10,12 @@
 
   <body>
     <header id="top">
-      <nav>
-        <a href="index.html">strona główna</a>
-        <a href="nauka-html.html">nauka html</a>
-        <a href="nauka-css.html">nauka css</a>
+      <nav class="navigation">
+        <a class="navigation__link navigation__link--homepage" href="index.html"
+          >strona główna</a
+        >
+        <a class="navigation__link" href="nauka-html.html">nauka html</a>
+        <a class="navigation__link" href="nauka-css.html">nauka css</a>
       </nav>
     </header>
 
@@ -26,14 +28,14 @@
       <section class="my-love-notes">
         <h2 id="notatki">Moje ulubione własności</h2>
 
-        <article>
-          <h3>background</h3>
-          <p>Zmienia kolor tła za elementem lub klasą</p>
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">background</h3>
+          <p class="learn-technique__description">Zmienia kolor tła za elementem lub klasą</p>
         </article>
 
-        <article>
-          <h3>color</h3>
-          <p>zmienia kolor tekstu</p>
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">color</h3>
+          <p class="learn-technique__description">zmienia kolor tekstu</p>
         </article>
       </section>
     </main>
