--- a/nauka-html.html
+++ b/nauka-html.html
@@ -19,9 +19,9 @@
       </nav>
     </header>
 
-    <main>
+    <main class="main">
       <header>
-        <h1>Nauka HTML-a</h1>
+        <h1 class="main__heading">Nauka HTML-a</h1>
       </header>
       <img src="html_ikonka.jpg" alt="ikonka html" />
 
@@ -43,11 +43,23 @@
           <p class="learn-technique__description">Kropka . to jest symbol klasy</p>
         </article>
       </section>
+      <section id="newsletter">
+        <article class="newsletter">
+          <h2 class="newsletter__title">Pozostańmy w kontakcie! ;)</h2>
+          <p class="newsletter__description">
+            Jeśli spodobał Ci się artykuł daj mi koniecznie o tym znać. To
+            pomoże mi nabrać wiatru w żagle a Ty dostaniesz w zamian nową porcję
+            informacji ;)<br />
+            Pozdrawiam i czekam na odpowiedź, hej! ;)
+          </p>
+          <div class="newsletter__button" id="button">napisz do mnie ;)</div>
+        </article>
+      </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       to jest stopka mojej strony i pasuje tu napisać coś mądrego -> 2021.03.17
-      <a href="#top">Wróć na górę strony</a>
+      <a class="footer__link" href="#top">Wróć na górę strony</a>
     </footer>
   </body>
 </html>
