add greet in console and normalize.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Konrad</title>
+    <link href="normalize.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
@@ -84,15 +85,17 @@
             odcinków na dany temat. Tematy można wybierać w zależności od
             preferencji. Możemy subskrybować ulubionych twórców. Aktualnie
             używam aplikacji Podcast Addict i oceniam ją o wiele lepiej niż moją
-            poprzednią apkę: Player FM. Między innymi przez mnogość opcji,
+            poprzednią apkę. Między innymi przez mnogość opcji,
             automatyczne pobieranie, opcje archiwum oraz dostępność większej
             ilości kanałów.
           </p>
         </article>
 
         <article class="learn-technique">
-          <h3 class="learn-technique__title">Ćwiczenie z JavaScript</h3>
+          <h3 class="learn-technique__title learn-technique__title--js">Ćwiczenie z JavaScript</h3>
           <p class="learn-technique__description learn-technique__description--js">
+          </p>
+          <p class="learn-technique__description learn-technique__descriptionParagraph--js">
           </p>
         </article>
 
