styles change and add unordered list in paragraph

--- a/index.html
+++ b/index.html
@@ -67,14 +67,15 @@
           <p class="learn-technique__description">
             Tutaj nie poświęcam tyle czasu ile bym chciał, ale nadrabiam
             zaległości słuchając podcastów i podobnych tego typu treści.<br />
-            Aktualnie sprawdzam metody nauki i jest to np: <br />
-            - smsy do znajomych w języku angielskim,<br />
-            - zmiana języka systemu operacyjnego,<br />
-            - zapisywanie notatek w kalendarzu w języku angielskim,<br />
-
-            Podsumowując próbuję zmienić myślenie na takie angielskie ;) czy mi
-            się uda? Zobaczymy...
-          </p>
+            Aktualnie sprawdzam metody nauki i jest to np: <br /></p>
+            <ul class="learn-technique__description">
+              <li>smsy do znajomych w języku angielskim,</li>
+              <li>zmiana języka systemu operacyjnego,</li>
+              <li>zapisywanie notatek w kalendarzu w języku angielskim,</li>
+          </ul>
+            <p class="learn-technique__description">Podsumowując próbuję zmienić myślenie na takie angielskie ;) czy mi
+            się uda? Zobaczymy...</p>
+            
         </article>
 
         <article class="learn-technique">
