grid styles added

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     </header>
 
     <main class="main">
-      <header >
+      <header class="header">
         <h1 class="main__heading main__heading--js">Konrad Bujas - strona domowa na potrzeby kursu WTF</h1>
       </header>
 
-      <section class="about-me">
+      <section class="about-me aside">
         <h2 class="about-me__heading">Kim jestem?</h2>
         <img class="about-me__photo" src="konrad.jpg" alt="Uśmiechnięty Konrad" />
         <p class="about-me__description">
@@ -46,10 +46,10 @@
         </p>
       </section>
 
-      <section>
-        <h2 id="notatki">Notatki z WTF</h2>
+      <section class="">
+        <h2 class="learn-technique article" id="notatki">Notatki z WTF</h2>
 
-        <article class="learn-technique">
+        <article class="learn-technique article">
           <h3 class="learn-technique__title">WTF czyli Co Ten Frontend</h3>
           <p class="learn-technique__description">
             Aktualnie sporą część czasu zajmuje mi kurs WTF Co Ten Frontend.
@@ -102,7 +102,7 @@
 
 
       </section>
-      <section id="newsletter">
+      <section id="newsletter" class="newsletter">
         <article class="newsletter">
           <h2 class="newsletter__title">Pozostańmy w kontakcie! ;)</h2>
           <p class="newsletter__description">
