--- a/nauka-css.html
+++ b/nauka-css.html
@@ -21,14 +21,14 @@
     </header>
 
     <main class="main">
-      <header>
+      <header class="header">
         <h1 class="main__heading">Nauka CSS</h1>
       </header>
-      <img src="css-icon1.jpg" alt="ikonka css" />
+      
 
-      <section class="my-love-notes">
+      <section class="my-love-notes article">
         <h2 class="my-love-notes__title" id="notatki">Moje ulubione własności</h2>
-
+        <img src="css-icon1.jpg" alt="ikonka css" />
         <article class="learn-technique">
           <h3 class="learn-technique__title">background</h3>
           <p class="learn-technique__description">Zmienia kolor tła za elementem lub klasą</p>
@@ -39,7 +39,7 @@
           <p class="learn-technique__description">zmienia kolor tekstu</p>
         </article>
       </section>
-      <section id="newsletter">
+      <section id="newsletter" class="aside">
         <article class="newsletter">
           <h2 class="newsletter__title">Pozostańmy w kontakcie! ;)</h2>
           <p class="newsletter__description">
