responsive and hamburger menu

--- a/index.html
+++ b/index.html
@@ -10,29 +10,41 @@
   </head>
 
   <body>
-    <header id="top">
-      <nav class="navigation">
+    <header id="top" class="header__navigation">
+      <nav class="navigation navigation--js">
         <a class="navigation__link navigation__link--homepage" href="index.html"
           >strona główna</a
         >
         <a class="navigation__link" href="nauka-html.html">nauka html</a>
         <a class="navigation__link" href="nauka-css.html">nauka css</a>
+        <a class="navigation__link" href="nauka-html.html">nauka html</a>
+        <a class="navigation__link" href="nauka-css.html">nauka css</a>
       </nav>
+      <button class="hamburger hamburger--js">🍔</button>
+
     </header>
 
     <main class="main">
       <header class="header">
-        <h1 class="main__heading main__heading--js">Konrad Bujas - strona domowa na potrzeby kursu WTF</h1>
+        <h1 class="main__heading main__heading--js">
+          Konrad Bujas - strona domowa na potrzeby kursu WTF
+        </h1>
       </header>
 
       <section class="about-me aside">
         <h2 class="about-me__heading">Kim jestem?</h2>
-        <img class="about-me__photo" src="konrad.jpg" alt="Uśmiechnięty Konrad" />
+        <img
+          class="about-me__photo"
+          src="konrad.jpg"
+          alt="Uśmiechnięty Konrad"
+        />
         <p class="about-me__description">
           Hej! Jestem Konrad i już wiele przeszedłem ;) Aktualnie jestem w
           procesie zmiany branży na IT i cisnę ze szkoleniem Maćka Korsana
           <strong
-            ><a class="about-me__link" href="https://cotenfrontend.pl">WTF Co Ten Frontend.</a></strong
+            ><a class="about-me__link" href="https://cotenfrontend.pl"
+              >WTF Co Ten Frontend.</a
+            ></strong
           ><br />
 
           Wcześniej <b>wiele próbowałem</b> i szukałem zajęcia, ale większość
@@ -47,7 +59,10 @@
       </section>
 
       <section class="">
-        <h2 class="learn-technique article" id="notatki">Notatki z WTF</h2>
+        <h2 class="learn-technique article" id="notatki">
+          Notatki z WTF<span class="mobile"> - JESTEM NA MOBILCE</span
+          ><span class="myScreen"> WYŚWIETLANIE NA EKRANIE ! ! ! ;)</span>
+        </h2>
 
         <article class="learn-technique article">
           <h3 class="learn-technique__title">WTF czyli Co Ten Frontend</h3>
@@ -67,15 +82,17 @@
           <p class="learn-technique__description">
             Tutaj nie poświęcam tyle czasu ile bym chciał, ale nadrabiam
             zaległości słuchając podcastów i podobnych tego typu treści.<br />
-            Aktualnie sprawdzam metody nauki i jest to np: <br /></p>
-            <ul class="learn-technique__description">
-              <li>smsy do znajomych w języku angielskim,</li>
-              <li>zmiana języka systemu operacyjnego,</li>
-              <li>zapisywanie notatek w kalendarzu w języku angielskim,</li>
+            Aktualnie sprawdzam metody nauki i jest to np: <br />
+          </p>
+          <ul class="learn-technique__description">
+            <li>smsy do znajomych w języku angielskim,</li>
+            <li>zmiana języka systemu operacyjnego,</li>
+            <li>zapisywanie notatek w kalendarzu w języku angielskim,</li>
           </ul>
-            <p class="learn-technique__description">Podsumowując próbuję zmienić myślenie na takie angielskie ;) czy mi
-            się uda? Zobaczymy...</p>
-            
+          <p class="learn-technique__description">
+            Podsumowując próbuję zmienić myślenie na takie angielskie ;) czy mi
+            się uda? Zobaczymy...
+          </p>
         </article>
 
         <article class="learn-technique">
@@ -86,21 +103,27 @@
             odcinków na dany temat. Tematy można wybierać w zależności od
             preferencji. Możemy subskrybować ulubionych twórców. Aktualnie
             używam aplikacji Podcast Addict i oceniam ją o wiele lepiej niż moją
-            poprzednią apkę. Między innymi przez mnogość opcji,
-            automatyczne pobieranie, opcje archiwum oraz dostępność większej
-            ilości kanałów.
+            poprzednią apkę. Między innymi przez mnogość opcji, automatyczne
+            pobieranie, opcje archiwum oraz dostępność większej ilości kanałów.
           </p>
         </article>
 
         <article class="learn-technique">
-          <h3 class="learn-technique__title learn-technique__title--js">Ćwiczenie z JavaScript</h3>
-          <p class="learn-technique__description learn-technique__description--js">
-          </p>
-          <p class="learn-technique__description learn-technique__descriptionParagraph--js">
-          </p>
+          <h3 class="learn-technique__title learn-technique__title--js">
+            Ćwiczenie z JavaScript
+          </h3>
+          <p
+            class="
+              learn-technique__description learn-technique__description--js
+            "
+          ></p>
+          <p
+            class="
+              learn-technique__description
+              learn-technique__descriptionParagraph--js
+            "
+          ></p>
         </article>
-
-
       </section>
       <section id="newsletter" class="newsletter">
         <article class="newsletter">
