--- a/nauka-css.html
+++ b/nauka-css.html
@@ -12,9 +12,9 @@
   <body>
     <header id="top">
       <nav class="navigation">
-        <a class="navigation__link navigation__link--homepage" href="index.html"
-          >strona główna</a
-        >
+        <a class="navigation__link navigation__link--homepage" href="index.html">strona główna</a>
+        <a class="navigation__link" href="nauka-html.html">nauka html</a>
+        <a class="navigation__link" href="nauka-css.html">nauka css</a>
         <a class="navigation__link" href="nauka-html.html">nauka html</a>
         <a class="navigation__link" href="nauka-css.html">nauka css</a>
       </nav>
