button welcome and background style change

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <h1 class="main__heading main__heading--js">
           Konrad Bujas - strona domowa na potrzeby kursu WTF
         </h1>
+        <button class="button__welcome action--js">przywitanie - click!</button>
       </header>
 
       <section class="about-me aside">
