resume and bug fix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
 
   <body>
-    <header id="top" class="header__navigation">
+    <header id="top">
+      <header class="header__navigation"> 
       <nav class="navigation navigation--js">
         <a class="navigation__link navigation__link--homepage" href="index.html"
           >strona główna</a
