--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             chociaż dwa takie obszary dnia.
           </p>
         </article>
-
+<div class="grid__article">
         <article class="learn-technique learn-technique--special">
           <h3 class="learn-technique__title">Język angielski</h3>
           <p class="learn-technique__description">
@@ -126,6 +126,8 @@
             "
           ></p>
         </article>
+
+      </div>
       </section>
       <section id="newsletter" class="newsletter">
         <article class="newsletter">
