add pseudo elements in css, add styles, example articles

--- a/index.html
+++ b/index.html
@@ -127,6 +127,59 @@
           ></p>
         </article>
 
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">Przykładowy artykuł</h3>
+          <p class="learn-technique__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima numquam nesciunt voluptatum unde exercitationem. Aspernatur iusto repellat totam excepturi sapiente quibusdam, repellendus natus at reprehenderit laboriosam recusandae temporibus, quaerat iure!
+            <br/>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima numquam nesciunt voluptatum unde exercitationem. Aspernatur iusto repellat totam excepturi sapiente quibusdam, repellendus natus at reprehenderit laboriosam recusandae temporibus, quaerat iure!
+
+          </p>
+        </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">Przykładowy artykuł</h3>
+          <p class="learn-technique__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima numquam nesciunt voluptatum unde exercitationem. Aspernatur iusto repellat totam excepturi sapiente quibusdam, repellendus natus at reprehenderit laboriosam recusandae temporibus, quaerat iure!
+            <br/>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima numquam nesciunt voluptatum unde exercitationem. Aspernatur iusto repellat totam excepturi sapiente quibusdam, repellendus natus at reprehenderit laboriosam recusandae temporibus, quaerat iure!
+
+          </p>
+        </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">Przykładowy artykuł</h3>
+          <p class="learn-technique__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima numquam nesciunt voluptatum unde exercitationem. Aspernatur iusto repellat totam excepturi sapiente quibusdam, repellendus natus at reprehenderit laboriosam recusandae temporibus, quaerat iure!
+            <br/>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima numquam nesciunt voluptatum unde exercitationem. Aspernatur iusto repellat totam excepturi sapiente quibusdam, repellendus natus at reprehenderit laboriosam recusandae temporibus, quaerat iure!
+
+          </p>
+        </article>
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">Przykładowy artykuł</h3>
+          <p class="learn-technique__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima numquam nesciunt voluptatum unde exercitationem. Aspernatur iusto repellat totam excepturi sapiente quibusdam, repellendus natus at reprehenderit laboriosam recusandae temporibus, quaerat iure!
+            <br/>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima numquam nesciunt voluptatum unde exercitationem. Aspernatur iusto repellat totam excepturi sapiente quibusdam, repellendus natus at reprehenderit laboriosam recusandae temporibus, quaerat iure!
+
+          </p>
+        </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">Przykładowy artykuł</h3>
+          <p class="learn-technique__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima numquam nesciunt voluptatum unde exercitationem. Aspernatur iusto repellat totam excepturi sapiente quibusdam, repellendus natus at reprehenderit laboriosam recusandae temporibus, quaerat iure!
+            <br/>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima numquam nesciunt voluptatum unde exercitationem. Aspernatur iusto repellat totam excepturi sapiente quibusdam, repellendus natus at reprehenderit laboriosam recusandae temporibus, quaerat iure!
+
+          </p>
+        </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">Przykładowy artykuł</h3>
+          <p class="learn-technique__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima numquam nesciunt voluptatum unde exercitationem. Aspernatur iusto repellat totam excepturi sapiente quibusdam, repellendus natus at reprehenderit laboriosam recusandae temporibus, quaerat iure!
+            <br/>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima numquam nesciunt voluptatum unde exercitationem. Aspernatur iusto repellat totam excepturi sapiente quibusdam, repellendus natus at reprehenderit laboriosam recusandae temporibus, quaerat iure!
+
+          </p>
+        </article>
+
       </div>
       </section>
       <section id="newsletter" class="newsletter">
