--- a/nauka-css.html
+++ b/nauka-css.html
@@ -29,6 +29,9 @@
       <section class="my-love-notes article">
         <h2 class="my-love-notes__title" id="notatki">Moje ulubione własności</h2>
         <img src="css-icon1.jpg" alt="ikonka css" />
+
+        <div class="grid__article">
+
         <article class="learn-technique">
           <h3 class="learn-technique__title">background</h3>
           <p class="learn-technique__description">Zmienia kolor tła za elementem lub klasą</p>
@@ -38,8 +41,45 @@
           <h3 class="learn-technique__title">color</h3>
           <p class="learn-technique__description">zmienia kolor tekstu</p>
         </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">przykładowe</h3>
+          <p class="learn-technique__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi in velit facilis dolores ducimus magni mollitia excepturi, itaque tempore omnis illum beatae accusamus labore dicta nemo tenetur dolore temporibus autem.</p>
+        </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">przykładowe</h3>
+          <p class="learn-technique__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi in velit facilis dolores ducimus magni mollitia excepturi, itaque tempore omnis illum beatae accusamus labore dicta nemo tenetur dolore temporibus autem.</p>
+        </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">przykładowe</h3>
+          <p class="learn-technique__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi in velit facilis dolores ducimus magni mollitia excepturi, itaque tempore omnis illum beatae accusamus labore dicta nemo tenetur dolore temporibus autem.</p>
+        </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">przykładowe</h3>
+          <p class="learn-technique__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi in velit facilis dolores ducimus magni mollitia excepturi, itaque tempore omnis illum beatae accusamus labore dicta nemo tenetur dolore temporibus autem.</p>
+        </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">przykładowe</h3>
+          <p class="learn-technique__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi in velit facilis dolores ducimus magni mollitia excepturi, itaque tempore omnis illum beatae accusamus labore dicta nemo tenetur dolore temporibus autem.</p>
+        </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">przykładowe</h3>
+          <p class="learn-technique__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi in velit facilis dolores ducimus magni mollitia excepturi, itaque tempore omnis illum beatae accusamus labore dicta nemo tenetur dolore temporibus autem.</p>
+        </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">przykładowe</h3>
+          <p class="learn-technique__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi in velit facilis dolores ducimus magni mollitia excepturi, itaque tempore omnis illum beatae accusamus labore dicta nemo tenetur dolore temporibus autem.</p>
+        </article>
+
       </section>
-      <section id="newsletter" class="aside">
+    </div>
+      <section id="newsletter" class="newsletter">
         <article class="newsletter">
           <h2 class="newsletter__title">Pozostańmy w kontakcie! ;)</h2>
           <p class="newsletter__description">
