--- a/nauka-html.html
+++ b/nauka-html.html
@@ -12,22 +12,25 @@
   <body>
     <header id="top">
       <nav class="navigation">
-        <a class="navigation__link navigation__link--homepage" href="index.html"
-          >strona główna</a
-        >
+        <a class="navigation__link navigation__link--homepage" href="index.html">strona główna</a>
+        <a class="navigation__link" href="nauka-html.html">nauka html</a>
+        <a class="navigation__link" href="nauka-css.html">nauka css</a>
         <a class="navigation__link" href="nauka-html.html">nauka html</a>
         <a class="navigation__link" href="nauka-css.html">nauka css</a>
       </nav>
     </header>
 
     <main class="main">
-      <header>
-        <h1 class="main__heading">Nauka HTML-a</h1>
+      <header class="header">
+        <h1 class="main__heading">Nauka HTML</h1>
       </header>
-      <img src="html_ikonka.jpg" alt="ikonka html" />
+     
 
-      <section class="my-love-notes">
-        <h2>Moje ulubione tagi</h2>
+      <section class="my-love-notes article">
+        <h2 class="my-love-notes__title" id="notatki">Moje ulubione tagi</h2>
+        <img src="html_ikonka.jpg" alt="ikonka html" />
+
+    <div class="grid__article">
 
         <article class="learn-technique" >
           <h3 class="learn-technique__title">h1</h3>
@@ -43,8 +46,40 @@
           <h3 class="learn-technique__title">. (kropka)</h3>
           <p class="learn-technique__description">Kropka . to jest symbol klasy</p>
         </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">przykładowe</h3>
+          <p class="learn-technique__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, repudiandae. Et, repellendus alias asperiores harum possimus nemo minima eveniet? Recusandae dolores placeat necessitatibus iste assumenda numquam nam molestias facilis fugiat?</p>
+        </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">przykładowe</h3>
+          <p class="learn-technique__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, repudiandae. Et, repellendus alias asperiores harum possimus nemo minima eveniet? Recusandae dolores placeat necessitatibus iste assumenda numquam nam molestias facilis fugiat?</p>
+        </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">przykładowe</h3>
+          <p class="learn-technique__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, repudiandae. Et, repellendus alias asperiores harum possimus nemo minima eveniet? Recusandae dolores placeat necessitatibus iste assumenda numquam nam molestias facilis fugiat?</p>
+        </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">przykładowe</h3>
+          <p class="learn-technique__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, repudiandae. Et, repellendus alias asperiores harum possimus nemo minima eveniet? Recusandae dolores placeat necessitatibus iste assumenda numquam nam molestias facilis fugiat?</p>
+        </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">przykładowe</h3>
+          <p class="learn-technique__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, repudiandae. Et, repellendus alias asperiores harum possimus nemo minima eveniet? Recusandae dolores placeat necessitatibus iste assumenda numquam nam molestias facilis fugiat?</p>
+        </article>
+
+        <article class="learn-technique">
+          <h3 class="learn-technique__title">przykładowe</h3>
+          <p class="learn-technique__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, repudiandae. Et, repellendus alias asperiores harum possimus nemo minima eveniet? Recusandae dolores placeat necessitatibus iste assumenda numquam nam molestias facilis fugiat?</p>
+        </article>
+
       </section>
-      <section id="newsletter">
+    </div>
+      <section id="newsletter" class="newsletter">
         <article class="newsletter">
           <h2 class="newsletter__title">Pozostańmy w kontakcie! ;)</h2>
           <p class="newsletter__description">
